# radio-gyms

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  readme.md  setup.cfg  upload.sh
assets/models/: logo3d.blend  logo3d.blend1
docs/: tutorial.md
docs/engines/: ray_tracer.md
notebooks/: Gym01_IntelligentUAV.ipynb  RadioGyms_PropagationMap.ipynb  test_notebook_visualization.ipynb
radio_gyms/engines/: __init__.py
radio_gyms/engines/ray_tracer/: box.py  bvh.py  obj_reader.py  tracer.py  triangle.py
radio_gyms/gyms/: __init__.py  base.py  location_gym.py  location_prediction.py
radio_gyms/models/: __init__.py  hata_okumura.py  outdoor.py  theoretical.py
radio_gyms/objects/: __init__.py  cell.py  pedestrian.py  receiver.py  transmitter.py
radio_gyms/simulations/: __init__.py  oldtown_walk.py
radio_gyms/utils/: __init__.py  calculations.py  constants.py  converters.py  notebook.py  obj_reader.py  plotter.py
radio_gyms/visualizers/: __init__.py  plotter.py  visual_triangle.py  window.py
test/: test_gyms.py  test_model_outdoor.py  test_notebook.py  test_performance.py  test_simulation_oldtown.py  test_tracer.py  test_utils.py  test_version.py  test_virtualizer.py
