[metadata]
name = radio_gyms
version = 0.0.1
author = Intelek AI
author_email = supawat@intelek.ai
description = an open-source bundle of AI environments for radio communications
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/intelek-ai/radio-gyms
project_urls =
    Bug Tracker = https://github.com/intelek-ai/radio-gyms/issues
    Documentations = https://radio-gyms.intelek.ai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Topic :: Games/Entertainment :: Simulation
license = MIT
[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src